# musical-octo-palm-tree

./: .env.example  .gitignore  AUDIT_PROMPT.md  AUDIT_REPORT.md  CLAUDE.md  Cargo.toml  HANDOVER.md  LAUNCH_PLAN.md  README.md  RUST_ENGINE.md  VERCEL_ENV_SETUP.md  docker-compose.yml  railway.toml
.claude/commands/: audit.md  docs.md  knowledge.md  optimize.md  orchestrate.md  prelaunch.md  refactor.md  review.md  setup.md  ship.md  test.md
.claude/skills/api-design/: SKILL.md
.claude/skills/architect/: SKILL.md
.claude/skills/authentication/: SKILL.md
.claude/skills/caching/: SKILL.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/database-design/: SKILL.md
.claude/skills/debugger/: SKILL.md
.claude/skills/docker/: SKILL.md
.claude/skills/documentation-writer/: SKILL.md
.claude/skills/github-actions/: SKILL.md
.claude/skills/migration-specialist/: SKILL.md
.claude/skills/orchestration/: SKILL.md  workflow.md
.claude/skills/orchestration/agents/: architect-final.md  architect.md  executor.md  integrator.md  planner-final.md  planner-verify.md  planner.md  (+1 more)
.claude/skills/orchestrator/: SKILL.md
.claude/skills/performance-optimizer/: SKILL.md
.claude/skills/python/: SKILL.md
.claude/skills/react/: SKILL.md
.claude/skills/refactoring-expert/: SKILL.md
.claude/skills/repo-initializer/: SKILL.md
.claude/skills/rust/: SKILL.md
.claude/skills/testing-expert/: SKILL.md
.claude/skills/trading-safety/: SKILL.md
.claude/skills/typescript/: SKILL.md
.claude/skills/websockets/: SKILL.md
api/: .env.example  auth.py  main.py  models.py  requirements.txt  vercel.json  websocket_manager.py
api/bots/: __init__.py  clipper.py  gabagool.py  sniper.py
api/services/database/: __init__.py  connection.py  logger.py  queries.py
api/services/polymarket/: __init__.py  client.py
api/services/sports/: __init__.py  espn.py  matcher.py
api/tests/: conftest.py  test_api.py  test_auth.py  test_matcher.py
dashboard/: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AuthPage.tsx  BotPanel.tsx  CombinedStats.tsx  DepthChart.tsx  Header.tsx  LiveIndicator.tsx  MetricCard.tsx  PortfolioChart.tsx  Sidebar.tsx  StrategyCard.tsx  TradeFeed.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/pages/: ActivityLogPage.tsx  AnalyticsPage.tsx  ClipperPage.tsx  DashboardPage.tsx  DecisionLogPage.tsx  GabagoolPage.tsx  MarketScannerPage.tsx  SniperPage.tsx  StrategyDetailPage.tsx  SynthArbPage.tsx
dashboard/src/stores/: useAuthStore.ts  useBotStore.ts
dashboard/src/test/: setup.ts
engine/: .dockerignore  .env.example  Cargo.toml  Dockerfile  init.sql
engine/benches/: latency.rs
engine/src/: config.rs  main.rs  metrics.rs
engine/src/analysis/: mod.rs  sum_deviation.rs
engine/src/db/: mod.rs  repository.rs
engine/src/execution/: mod.rs  order_manager.rs  paper.rs
engine/src/market/: data.rs  mod.rs
engine/src/notifications/: mod.rs  slack.rs
engine/src/redis/: mod.rs  publisher.rs
engine/src/risk/: manager.rs  mod.rs
engine/src/strategy/: clipper.rs  engine.rs  sniper.rs  sum_to_100.rs  traits.rs
engine/src/ws/: handler.rs  mod.rs
python/: README.md  __init__.py
src/: config.rs  main.rs
src/analysis/: mod.rs  sum_deviation.rs
src/db/: mod.rs  repository.rs
src/execution/: mod.rs  order_manager.rs  paper.rs
src/market/: data.rs  mod.rs
src/notifications/: mod.rs  slack.rs
src/redis/: mod.rs  publisher.rs
src/risk/: manager.rs
src/strategy/: clipper.rs  engine.rs  mod.rs  sniper.rs  sum_to_100.rs
src/ws/: handler.rs  mod.rs
(+9 files in other folders)
