[package]
name = "poly-rust"
version = "0.1.0"
edition = "2021"
description = "High-performance trading bots for Polymarket"
authors = ["Your Name"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync", "time", "macros", "rt-multi-thread"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency primitives
dashmap = "5"
flume = "0.11"
parking_lot = "0.12"

# Crypto (for signing Polymarket orders)
ethers = { version = "2", features = ["rustls"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# URL handling
url = "2"

# Random number generation
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bench]]
name = "latency"
harness = false
