[package]
name = "poly-rust"
version = "0.1.0"
edition = "2021"
description = "High-performance trading bots for Polymarket"
authors = ["Your Name"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync", "time", "macros", "rt-multi-thread"] }

# WebSocket (default-features=false to exclude native-tls/OpenSSL)
# connect feature enables connect_async, rustls-tls-native-roots provides TLS
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures = "0.3"
futures-util = "0.3"

# HTTP client (default-features=false to exclude native-tls/OpenSSL)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency primitives
dashmap = "5"
flume = "0.11"
parking_lot = "0.12"

# Crypto (for signing Polymarket orders)
# Default features include rustls (not openssl), so keep them
ethers = { version = "2" }

# Error handling
thiserror = "1"
anyhow = "1"

# Pin home crate to version compatible with stable Rust (0.5.9 works with Rust 1.70+)
home = "=0.5.9"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# URL handling
url = "2"

# Random number generation
rand = "0.8"

# Graceful shutdown support
tokio-util = { version = "0.7", features = ["rt"] }

# Redis (for pub/sub with Python dashboard) - no TLS needed for internal connection
redis = { version = "0.24", default-features = false, features = ["tokio-comp", "connection-manager"] }

# Database (PostgreSQL for trade persistence) - use rustls for TLS
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "uuid", "tls-rustls"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Prometheus metrics for observability
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bench]]
name = "latency"
harness = false
